<resources>
    <string name="app_name">Eli Music Player</string>
    <string name="label_music_of" translatable="false">&#160;of&#160;</string>
    <string name="label_musics" translatable="false">Music :&#160;</string>
    <string name="message_not_music_selected" translatable="false">No music selected for play!</string>
    <string name="message_not_music_selected_to_play" translatable="false">No music selected for play!</string>
    <string name="message_not_music_added_favorite" translatable="false">No music has been added to your Favorite list!</string>
    <string name="message_music_unknown_error" translatable="false">Unknown error occurred!</string>
    <string name="message_not_permission_voice_recorder" translatable="false">You do not have access to voice recorder, equalizer Will not be displayed</string>
    <string name="message_not_permission_external_storage" translatable="false">You do not have access permission to Read External Storage!You can not select music from external storage!</string>
    <string name="message_access_external_storage" translatable="false">Access to Read External Storage to select music files is required!</string>
    <string name="message_access_voice_recorder" translatable="false">Access to Audio recording to show Audio Visualizer is required!</string>
    <string name="message_access_camera" translatable="false">Access to Camera is required!</string>
    <string name="contentDescription_favorite_image" translatable="false">favorite musics</string>
    <string name="contentDescription_play_button" translatable="false">play music</string>
    <string name="contentDescription_skip_previous_button" translatable="false">previous music</string>
    <string name="contentDescription_skip_next_button" translatable="false">next music</string>
    <string name="contentDescription_forward_button" translatable="false">forward music</string>
    <string name="contentDescription_rewind_button" translatable="false">rewind music</string>
    <string name="about_ok_button" translatable="false">Ok</string>
    <string name="about_description" translatable="false">Eli Music Player is an open source app that has been developed by &lt;a href="https://github.com/haselmehri">Yadollah Haselmehri&lt;/a>.\nGet this source app from Github via the link below</string>
    <string name="about_github_link" translatable="false">&lt;a href="https://github.com/haselmehri/EliMusicPlayer">Github&lt;/a></string>
    <string name="update_message_dialog" translatable="false">Dear user\nThere is a new version of the app in the cafe Bazar, would you like to update?</string>
    <string name="update_title_dialog" translatable="false">New version of the App!</string>
    <string name="positive_button_dialog" translatable="false">Update App</string>
    <string name="negative_button_dialog" translatable="false">Cancel</string>
</resources>
