<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/music_player_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context=".MusicPlayerActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/music_player_app_bar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/music_player_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?colorPrimary"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <RelativeLayout
            android:id="@+id/content_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@color/color_background_cover_image"
                android:src="@drawable/music_player_background" />

            <TextView
                android:id="@+id/music_info_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:gravity="center"
                android:textColor="@color/colorAccentDark"
                android:textSize="@dimen/large_font_size"
                tools:text="# Tutorial : Using Media Player in Android" />

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/standard_margin_x2"
                android:layout_marginLeft="@dimen/music_player_seek_bar_margin"
                android:layout_marginRight="@dimen/music_player_seek_bar_margin"
                />
            <TextView
                android:id="@+id/selected_music_count_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/buttons_relativeLayout"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:padding="@dimen/very_small_padding"
                android:textColor="@color/colorAccentDark"
                android:textSize="@dimen/large_font_size"
                tools:text="Musics : 1 of 10"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/standard_margin" />

            <ImageView
                android:id="@+id/favorite_image"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:clickable="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_above="@id/buttons_relativeLayout"
                android:src="@drawable/ic_favorite_heart_gray"
                android:focusable="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/contentDescription_favorite_image"
                android:layout_marginStart="@dimen/standard_margin" />
            <ImageView
                android:id="@+id/volume_setting_image"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:clickable="true"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_above="@id/buttons_relativeLayout"
                android:src="@drawable/ic_volume_up"
                android:focusable="true"
                android:layout_toRightOf="@id/favorite_image"
                android:contentDescription="@string/contentDescription_favorite_image"
                android:layout_marginStart="@dimen/standard_margin" />

            <SeekBar
                android:id="@+id/volumeSeekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/buttons_relativeLayout"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_toLeftOf="@+id/selected_music_count_textview"
                android:layout_toRightOf="@id/volume_setting_image"
                android:layout_marginBottom="@dimen/standard_margin"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/buttons_relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/seek_bar"
                android:padding="@dimen/very_small_padding">

                <ImageView
                    android:id="@+id/play_button"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:background="@drawable/selector_play_button"
                    android:elevation="2dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:paddingRight="13dp"
                    android:paddingLeft="14dp"
                    android:src="@drawable/ic_play"
                    android:paddingEnd="13dp"
                    android:paddingStart="14dp"
                    android:contentDescription="@string/contentDescription_play_button"/>

                <ImageView
                    android:id="@+id/forward_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/standard_margin_x2"
                    android:layout_toRightOf="@id/play_button"
                    android:src="@drawable/ic_fast_forward_black_48dp"
                    android:layout_marginStart="@dimen/standard_margin_x2"
                    android:layout_toEndOf="@id/play_button"
                    android:contentDescription="@string/contentDescription_forward_button"/>

                <ImageView
                    android:id="@+id/skip_next_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/forward_button"
                    app:srcCompat="@drawable/ic_skip_next"
                    android:layout_toEndOf="@id/forward_button"
                    android:contentDescription="@string/contentDescription_skip_next_button"/>

                <ImageView
                    android:id="@+id/rewind_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/standard_margin_x2"
                    android:layout_toLeftOf="@id/play_button"
                    android:src="@drawable/ic_fast_rewind_black_48dp"
                    android:layout_marginEnd="@dimen/standard_margin_x2"
                    android:layout_toStartOf="@id/play_button"
                    android:contentDescription="@string/contentDescription_rewind_button"/>

                <ImageView
                    android:id="@+id/skip_previous_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/rewind_button"
                    app:srcCompat="@drawable/ic_skip_previous"
                    android:layout_toStartOf="@id/rewind_button"
                    android:contentDescription="@string/contentDescription_skip_previous_button"/>

                <TextView
                    android:id="@+id/music_duration_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/music_player_dark_gray"
                    android:textSize="16sp"
                    tools:text="5:25"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:id="@+id/music_current_duration_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/music_player_dark_gray"
                    android:textSize="16sp"
                    tools:text="01:25"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_navigation_header_music_player"
        app:menu="@menu/menu_navigation_music_player"/>
</androidx.drawerlayout.widget.DrawerLayout>